# snake-sfml

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Constants.h  Food.h  Game.h  Snake.h
src/: Food.cpp  Game.cpp  Snake.cpp  main.cpp
tools/cmake/: utils.cmake
